feat: remove scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,20 @@
       @apply bg-background text-foreground;
     }
   }
+
+  html ::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+html ::-webkit-scrollbar {
+  width: 4px;
+  background-color: transparent;
+}
+
+html ::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
